# terminal_pilot

./: .gitignore  LICENSE  README.md  ponytail.md  pyproject.toml  test_or.py
.agents/: AGENTS.md
terminal_pilot/: __main__.py  cli.py
terminal_pilot/providers/: openrouter.py
