[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "Terminal_Pilot"
version = "0.1.0"
description = "A CLI tool to connect to OpenRouter and chat with free models."
dependencies = [
    "click>=8.0",
    "questionary>=2.0",
    "requests>=2.28",
    "python-dotenv>=1.0",
    "rich>=13.0"
]
requires-python = ">=3.8"

[project.scripts]
terminal_pilot = "terminal_pilot.cli:main"
tp = "terminal_pilot.cli:main"
