[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "Terminal_Pilot"
version = "0.1.3"
description = "A minimalist CLI tool to connect to OpenRouter and chat with free AI models directly from your terminal."
readme = "README.md"
authors = [
    { name = "Mohammed Aliazhar", email = "azharali07071997@gmail.com" }
]
urls = { Repository = "https://github.com/MohammedAliazhar/terminal_pilot" }
dependencies = [
    "click>=8.0",
    "questionary>=2.0",
    "requests>=2.28",
    "python-dotenv>=1.0",
    "rich>=13.0"
]
requires-python = ">=3.8"

[project.scripts]
terminal_pilot = "terminal_pilot.cli:main"
tp = "terminal_pilot.cli:main"

[tool.uv.workspace]
members = [
    "terminal_pilot/Project-X",
]
